--- a/templates/index.html
+++ b/templates/index.html
@@ -45,8 +45,9 @@
 					<h1 class="title">Desconecta</h1>
 					<h1 class="subtitle">Deja de alimentar a la bestia</h1>
 					<p class="block">
-						Por razones políticas, éticas o de consciencia,
-						no queremos que nuestro dinero se vaya a las grandes empresas.
+						El IBEX y las grandes empresas perjudican
+						a la ciudadania y al medioambiente,
+						por eso no queremos nutrirles con nuestro dinero.
 					</p>
 					<div class="button is-info has-icon-left">
 						Los motivos &nbsp;
@@ -84,8 +85,9 @@
 						Por sectores
 					</p>
 					<p class="block">
-						Con diferenes grados de compromiso y comodidad.
-						Presentamos transparentemente las bondades y inconvenientes para que seas tú quien tome la opción que más te convenga.
+						De cada sector presentamos varias alternativas
+						para que cada persona encuentre la vía de desconexión que más le funcione,
+						explicando sus bondades y inconvenientes.
 					</p>
 					<div class="button is-danger has-icon-left">
 						Descubrelas &nbsp;
@@ -134,8 +136,10 @@
 
 
 {% from '_includes/_defaults.html' import RECENT_ARTICLES_COUNT, ARCHIVES_URL, CATEGORIES_URL with context %}
+
 <section class="section blog-posts">
 	<div class="container">
+		<h1 class="title">Noticias</h1>
 		<div class="columns">
 			<div class="column is-10 is-offset-1">
 				<div class="columns featured-post is-multiline">
@@ -164,7 +168,7 @@
 									<h1 class="title post-title">{{ article.title }}</h1>
 									<p class="post-excerpt">{{ article.summary }}</p>
 									<br>
-									<a href="{{ SITEURL }}/{{ article.url }}" class="button is-primary">Read More</a>
+									<a href="{{ SITEURL }}/{{ article.url }}" class="button is-primary">Lee Más</a>
 								</div>
 							</div>
 							{% endfor %}
@@ -197,7 +201,7 @@
 								<h1 class="title post-title">{{ article.title }}</h1>
 								<p class="post-excerpt">{{ article.summary }}</p>
 								<br>
-								<a href="{{ SITEURL }}/{{ article.url }}" class="button is-primary">Read More</a>
+								<a href="{{ SITEURL }}/{{ article.url }}" class="button is-primary">Lee Más</a>
 							</div>
 						</article>
 					</div>
@@ -226,7 +230,7 @@
 								<h1 class="title post-title">{{ article.title }}</h1>
 								<p class="post-excerpt">{{ article.summary }}</p>
 								<br>
-								<a href="{{ SITEURL }}/{{ article.url }}" class="button is-primary">Read More</a>
+								<a href="{{ SITEURL }}/{{ article.url }}" class="button is-primary">Lee Más</a>
 							</div>
 						</article>
 					</div>
