templates/base: closing tags

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html lang="{{ DEFAULT_LANG }}">
 <head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
+	<meta charset="utf-8" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css" />
 	<script defer src="https://use.fontawesome.com/releases/v5.14.0/js/all.js"></script>
 	{% block head_links %}
 	{% if 'assets' in PLUGINS %}
 	{% include '_includes/minify_css.html' with context %}
 	{% else %}
-	<delink rel="stylesheet" type="text/css" href="{{ SITEURL }}/theme/css/elegant.prod.9e9d5ce754.css" media="screen">
-	<link rel="stylesheet" type="text/css" href="{{ SITEURL }}/theme/css/custom.css" media="screen">
+	<!--link rel="stylesheet" type="text/css" href="{{ SITEURL }}/theme/css/elegant.prod.9e9d5ce754.css" media="screen" /-->
+	<link rel="stylesheet" type="text/css" href="{{ SITEURL }}/theme/css/custom.css" media="screen" />
 	{% endif %}
 	{% endblock head_links %}
-	<link rel="dns-prefetch" href="//fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
+	<link rel="dns-prefetch" href="//fonts.googleapis.com" />
+	<link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin />
 
 	{% if CLAIM_GOOGLE %}
 	{% include '_includes/claim_google.html' with context %}
@@ -41,10 +41,10 @@
 	{% block meta_tags_in_head %}
 	{% from '_includes/_defaults.html' import TWITTER_USERNAME with context %}
 	{% if TWITTER_USERNAME %}
-	<meta name="twitter:creator" content="@{{ TWITTER_USERNAME }}">
+	<meta name="twitter:creator" content="@{{ TWITTER_USERNAME }}" />
 	{% endif %}
 	<meta property="og:type" content="article" />
-	<meta name="twitter:card" content="summary">
+	<meta name="twitter:card" content="summary" />
 	{% endblock meta_tags_in_head %}
 	<title>{% block title %}{{ SITENAME|striptags|e }}{% endblock title %}</title>
 	{% include '_includes/favicon_links.html' %}
@@ -54,7 +54,6 @@
 	{% include '_includes/analytics.html' %}
 </head>
 <body class="has-navbar-fixed-top">
-
 
 <nav class="navbar is-fixed-top is-light" role="navigation" aria-label="main navigation">
 
