working on menus

--- a/templates/index.html
+++ b/templates/index.html
@@ -59,8 +59,8 @@
 
 </section>
 
-<section class="section sectors has-background-info-light has-text-info">
-	<div class="container block">
+<section id="section_sectors" class="section sectors has-background-info-light has-text-info">
+	<div class="container">
 				<h1 class="title">
 					Sectores
 				</h1>
@@ -96,7 +96,7 @@
 
 {% from '_includes/_defaults.html' import RECENT_ARTICLES_COUNT, ARCHIVES_URL, CATEGORIES_URL with context %}
 
-<section class="section blog-posts">
+<section id="section_news" class="section blog-posts">
 	<div class="container">
 		<h1 class="title">Noticias</h1>
 		<div class="columns">
