--- a/templates/index.html
+++ b/templates/index.html
@@ -1,8 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}
-{{ super() }}
-{% endblock title %}
+{% block title %}{{ super() }}{% endblock title %}
 
 {% block meta_tags_in_head %}
 {{ super() }}
@@ -105,9 +103,10 @@
 					<div class="column is-12 post">
 						<article class="columns featured">
 							{% for article in articles[:1] %}
-							<div class="column is-7 post-img ">
-								<img src="https://cdn.emk.dev/templates/featured-image.png" alt="">
-								<img src="{{ article.featured_image }}" alt="">
+							<div class="column is-7 post-img">
+								<div class="image is-16by9">
+									<img src="{{ article.featured_image or "https://cdn.emk.dev/templates/featured-image.png"}}" alt="Featured Image">
+								</div>
 							</div>
 							<div itemscope class="column is-5 featured-content va">
 								<div>
@@ -125,7 +124,7 @@
 									</div>
 									<h3 class="is-clearfix heading post-category">{{ article.categories | join(', ') }}</h3>
 									<h1 class="title post-title">{{ article.title }}</h1>
-									<p class="post-excerpt">{{ article.summary }}</p>
+									<p class="post-excerpt">{{ article._summary or article.summary }}</p>
 									<br>
 									<a href="{{ SITEURL }}/{{ article.url }}" class="button is-primary">Lee Más</a>
 								</div>
@@ -140,8 +139,9 @@
 					<div class="column post is-6">
 						<article class="columns is-multiline">
 							<div class="column is-12 post-img">
-								<img src="{{ article.featured_image }}" alt="">
-								<img src="https://cdn.emk.dev/templates/post-img.png" alt="Featured Image">
+								<div class="image is-16by9">
+									<img src="{{ article.featured_image or "https://cdn.emk.dev/templates/post-img.png"}}" alt="Featured Image">
+								</div>
 							</div>
 							<div itemscope class="column is-12 featured-content ">
 								<div class="">
@@ -158,7 +158,7 @@
 								</div>
 								<h3 class="is-clearfix heading post-category">{{ article.categories | join(', ') }}</h3>
 								<h1 class="title post-title">{{ article.title }}</h1>
-								<p class="post-excerpt">{{ article.summary }}</p>
+								<p class="post-excerpt">{{ article._summary or article.summary  }}</p>
 								<br>
 								<a href="{{ SITEURL }}/{{ article.url }}" class="button is-primary">Lee Más</a>
 							</div>
@@ -169,8 +169,9 @@
 					<div class="column post is-4">
 						<article class="columns is-multiline">
 							<div class="column is-12 post-img">
-								<img src="{{ article.featured_image }}" alt="">
-								<!--img src="https://cdn.emk.dev/templates/post-img.png" alt="Featured Image"-->
+								<div class="image is-16by9">
+									<img style="object-fit:cover;" src="{{ article.featured_image or "https://cdn.emk.dev/templates/post-img.png"}}" alt="Featured Image"/>
+								</div>
 							</div>
 							<div itemscope class="column is-12 featured-content ">
 								<div class="">
@@ -187,7 +188,7 @@
 								</div>
 								<h3 class="is-clearfix heading post-category">{{ article.categories | join(', ') }}</h3>
 								<h1 class="title post-title">{{ article.title }}</h1>
-								<p class="post-excerpt">{{ article.summary }}</p>
+								<p class="post-excerpt">{{ article._summary or article.summary }}</p>
 								<br>
 								<a href="{{ SITEURL }}/{{ article.url }}" class="button is-primary">Lee Más</a>
 							</div>
