--- a/templates/index.html
+++ b/templates/index.html
@@ -92,6 +92,37 @@
 </section>
 
 
+{% macro article_summary_card(article, ncolumns=6) %}
+<div class="column post is-{{ncolumns}}">
+	<article class="columns is-multiline">
+		<div class="column is-12 post-img">
+			<div class="image is-16by9">
+				<img class='fits-cover' src="{{ article.featured_image or "https://cdn.emk.dev/templates/post-img.png"}}" alt="Featured Image">
+			</div>
+		</div>
+		<div itemscope class="column is-12 featured-content ">
+			<div class="">
+				<time itemprop="dateCreated" datetime="{{ article.date.isoformat() }}">{{ article.locale_date }}</time>
+				{% for cat in article.categories or [article.category] %}
+				<div class="is-pulled-right">
+					<a href="{{ SITEURL }}/{{ CATEGORIES_URL }}#{{ cat.slug }}-ref">
+						<span class="image is-32x32">
+							<img src="images/categories/{{ cat | lower }}.png" alt="{{ cat }}" />
+						</span>
+					</a>
+				</div>
+				{% endfor %}
+			</div>
+			<h3 class="is-clearfix heading post-category">{{ article.categories | join(', ') }}</h3>
+			<h1 class="title post-title">{{ article.title }}</h1>
+			<p class="post-excerpt">{{ article._summary or article.summary  }}</p>
+			<br>
+			<a href="{{ SITEURL }}/{{ article.url }}" class="button is-primary">Lee Más</a>
+		</div>
+	</article>
+</div>
+{%- endmacro %}
+
 {% from '_includes/_defaults.html' import RECENT_ARTICLES_COUNT, ARCHIVES_URL, CATEGORIES_URL with context %}
 
 <section id="section_news" class="section blog-posts">
@@ -105,7 +136,7 @@
 							{% for article in articles[:1] %}
 							<div class="column is-7 post-img">
 								<div class="image is-16by9">
-									<img src="{{ article.featured_image or "https://cdn.emk.dev/templates/featured-image.png"}}" alt="Featured Image">
+									<img class="fits-cover" src="{{ article.featured_image or "https://cdn.emk.dev/templates/featured-img.png"}}" alt="Featured Image"/>
 								</div>
 							</div>
 							<div itemscope class="column is-5 featured-content va">
@@ -136,41 +167,14 @@
 				<hr>
 				<div class="columns is-multiline">
 					{% for article in articles[1:3] %}
-					<div class="column post is-6">
-						<article class="columns is-multiline">
-							<div class="column is-12 post-img">
-								<div class="image is-16by9">
-									<img src="{{ article.featured_image or "https://cdn.emk.dev/templates/post-img.png"}}" alt="Featured Image">
-								</div>
-							</div>
-							<div itemscope class="column is-12 featured-content ">
-								<div class="">
-									<time itemprop="dateCreated" datetime="{{ article.date.isoformat() }}">{{ article.locale_date }}</time>
-									{% for cat in article.categories or [article.category] %}
-									<div class="is-pulled-right">
-										<a href="{{ SITEURL }}/{{ CATEGORIES_URL }}#{{ cat.slug }}-ref">
-											<span class="image is-32x32">
-												<img src="images/categories/{{ cat | lower }}.png" alt="{{ cat }}" />
-											</span>
-										</a>
-									</div>
-									{% endfor %}
-								</div>
-								<h3 class="is-clearfix heading post-category">{{ article.categories | join(', ') }}</h3>
-								<h1 class="title post-title">{{ article.title }}</h1>
-								<p class="post-excerpt">{{ article._summary or article.summary  }}</p>
-								<br>
-								<a href="{{ SITEURL }}/{{ article.url }}" class="button is-primary">Lee Más</a>
-							</div>
-						</article>
-					</div>
+						{{ article_summary_card(article) }}
 					{% endfor %}
 					{% for article in articles[3:] %}
 					<div class="column post is-4">
 						<article class="columns is-multiline">
 							<div class="column is-12 post-img">
 								<div class="image is-16by9">
-									<img style="object-fit:cover;" src="{{ article.featured_image or "https://cdn.emk.dev/templates/post-img.png"}}" alt="Featured Image"/>
+									<img class="fits-cover" src="{{ article.featured_image or "https://cdn.emk.dev/templates/post-img.png"}}" alt="Featured Image"/>
 								</div>
 							</div>
 							<div itemscope class="column is-12 featured-content ">
