home links fixed

--- a/templates/base.html
+++ b/templates/base.html
@@ -58,11 +58,11 @@
 <nav class="navbar is-fixed-top is-light" role="navigation" aria-label="main navigation">
 
 	<div class="navbar-brand">
-		<a class="navbar-item" href="{{ SITEURL }}">
+		<a class="navbar-item" href="{{ SITEURL }}/">
 			<img src="{{ VOKIBLOG_SITELOGO }}" width="28px" height="28px">
 		</a>
 
-		<a class="navbar-item" href="{{ SITEURL }}">
+		<a class="navbar-item" href="{{ SITEURL }}/">
 			{{ SITENAME }} 
 		</a>
 
