solving relative urls

--- a/templates/base.html
+++ b/templates/base.html
@@ -59,7 +59,7 @@
 
 	<div class="navbar-brand">
 		<a class="navbar-item" href="{{ SITEURL }}/">
-			<img src="{{ VOKIBLOG_SITELOGO }}" width="28px" height="28px">
+			<img src="{{ SITEURL}}/{{ VOKIBLOG_SITELOGO }}" width="28px" height="28px">
 		</a>
 
 		<a class="navbar-item" href="{{ SITEURL }}/">
@@ -77,7 +77,7 @@
 		<div class="navbar-start">
 			{% for menuitem, target in MENUITEMS %}
 			{% if target is string %}
-			<a class="navbar-item" href="{{ target }}">
+			<a class="navbar-item" href="{{ SITEURL }}/{{ target }}">
 				{{ menuitem }}
 			</a>
 			{% else %}
@@ -90,7 +90,7 @@
 					{% if submenuitem == '-' %}
 					<hr class="navbar-divider" />
 					{% else %}
-					<a class="navbar-item" href="{{ subtarget }}">
+					<a class="navbar-item" href="{{ SITEURL }}/{{ subtarget }}">
 						{{ submenuitem }}
 					</a>
 					{% endif %}
