--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,7 @@
 	{% include '_includes/minify_css.html' with context %}
 	{% else %}
 	<!--link rel="stylesheet" type="text/css" href="{{ SITEURL }}/theme/css/elegant.prod.9e9d5ce754.css" media="screen" /-->
+	<link rel="stylesheet" type="text/css" href="{{ SITEURL }}/theme/css/admonition.css" media="screen" />
 	<link rel="stylesheet" type="text/css" href="{{ SITEURL }}/custom.css" media="screen" />
 	{% endif %}
 	{% endblock head_links %}
