--- a/templates/index.html
+++ b/templates/index.html
@@ -34,6 +34,8 @@
 			<img src="{{ VOKIBLOG_BANNER }}">
 		</div>
 	</div>
+
+	{% if VOKIBLOG_HIGHLIGHTS %}
 	<div class="container">
 		<div class="columns is-centered is-multiline">
 			{% for highlight in VOKIBLOG_HIGHLIGHTS %}
@@ -54,6 +56,7 @@
 			{% endfor %}
 		</div>
 	</div>
+	{% endif %}
 
 </section>
 
