--- a/content/extra/custom.css
+++ b/content/extra/custom.css
@@ -462,3 +462,27 @@ ul.articles-timeline {
 	margin-bottom: 0.5em;
 }
 
+
+footer {
+  align-content: center;
+  align-items: center;
+  border-top: 1px solid rgba(0, 0, 0, 0.2);
+  display: flex;
+  flex-direction: row;
+  flex-shrink: 0;
+  flex-wrap: wrap;
+  justify-content: flex-end;
+  margin: 15px 0 0 0;
+  min-height: 40px;
+  padding: 0 3px;
+}
+footer div {
+  margin: 3px 0;
+}
+footer div:first-child {
+  margin-right: auto;
+}
+footer div#fpowered {
+  margin-left: auto;
+  margin-right: unset;
+}
