including javascript: for search

--- a/templates/base.html
+++ b/templates/base.html
@@ -128,6 +128,7 @@
 
 {% include '_includes/footer.html' %}
 {% block script %}
+<script src="{{ SITEURL }}/theme/js/elegant.prod.9e9d5ce754.js"></script>
 <script src="//code.jquery.com/jquery.min.js"></script>
 <script>
 	function validateForm(query)
