--- a/templates/article.html
+++ b/templates/article.html
@@ -81,8 +81,6 @@
 
 			{% from '_includes/applause_button.html' import applause_button with context %}
 			{{ applause_button(article) }}
-			{% from '_includes/share_links.html' import share_links with context %}
-			{{ share_links(article) }}
 			{% from '_includes/article_author.html' import article_author with context %}
 			{{ article_author(article) }}
 			{% from '_includes/comments.html' import comments_section with context %}
@@ -91,7 +89,7 @@
 			{% if article.prev_article or article.next_article %}
 			<aside>
 				<nav>
-					<ul class="articles-timeline">
+					<ul class="articles-timeline columns">
 						{% if article.prev_article %}
 								{% set ptitle = article.prev_article.title|striptags|e %}
 								{% set pv_title = article.prev_article.title|striptags %}
@@ -99,7 +97,7 @@
 								{% set pv_title = pv_title + ' ' +  '<small class="subtitle">' + article.prev_article.subtitle|striptags + '</small>' %}
 										{% set ptitle = ptitle + ' - ' + article.prev_article.subtitle|e %}
 								{% endif %}
-						<li class="previous-article">« <a href="{{ SITEURL }}/{{ article.prev_article.url }}" title="Previous: {{ ptitle }}">{{ pv_title | truncate(60, False) }}</a></li>
+						<li class="previous-article column">« <a href="{{ SITEURL }}/{{ article.prev_article.url }}" title="Previous: {{ ptitle }}">{{ pv_title | truncate(60, False) }}</a></li>
 						{% endif %}
 						{% if article.next_article %}
 								{% set ntitle = article.next_article.title|striptags|e %}
@@ -108,7 +106,7 @@
 								{% set nv_title = nv_title + ' ' +  '<small class="subtitle">' + article.next_article.subtitle|striptags + '</small>' %}
 										{% set ntitle = ntitle + ' - ' + article.next_article.subtitle|e %}
 								{% endif %}
-						<li class="next-article"><a href="{{ SITEURL }}/{{ article.next_article.url }}" title="Next: {{ ntitle }}">{{ nv_title | truncate(60, False)}}</a> »</li>
+						<li class="next-article column"><a href="{{ SITEURL }}/{{ article.next_article.url }}" title="Next: {{ ntitle }}">{{ nv_title | truncate(60, False)}}</a> »</li>
 						{% endif %}
 					</ul>
 				</nav>
@@ -143,6 +141,7 @@
 			{% if article.tags and article.tags[0]|trim|count > 0 %}
 			{% from '_includes/_defaults.html' import TAGS_URL with context %}
 			<section class="article-tags">
+				<header class="header">Etiquetas</header>
 				<ul class="list-of-tags tags-in-article">
 					{% for tag in article.tags|sort %}
 					<li class="tag"><a href="{{ SITEURL }}/{{ TAGS_URL }}#{{ tag.slug }}-ref">{{ tag }}
@@ -153,6 +152,10 @@
 				</ul>
 			</section>
 			{% endif %}
+			<section class="article-share box">
+				{% from '_includes/share_links.html' import share_links with context %}
+				{{ share_links(article) }}
+			</section>
 			{#% include '_includes/social_links.html' %#}
 			{% from '_includes/mailchimp.html' import mailchimp with context %}
 			{{ mailchimp(article) }}
